- 18/02/2024
49. added authcram utility
- 19/02/2024
50. qmail-qfilter.c: exit with exit code of filter
51. qmail-smtpd.c: fix parsing permanent/temporary SMTP code for custom error
52. mailfilter.c: return permanent rejection for both 100 and
    QQ_PERM_MSG_REJECT codes
53. test-indimail-mta: added additional tests for FILTERARGS, qmail-qfilter

* Mon Jan 01 2024 18:55:50 +0000 Manvendra Bhangui <indimail-mta@indimail.org> 3.0.6-1.1%{?dist}
Release 3.0.6-1.1 Start 25/10/2023 End 01/01/2024
======= Release Highlights ================================================
- Multiple bug fixes and optimizations
- Refactored ETRN, ATRN code
- New program rd-remote with the same interface as qmail-remote for
  redirecting remote mails
- Added half/full detached mode in qmail-send, todo-proc, slowq-send
- Added negate option for archival feature in qmail-queue
- Added env variable EXCLUDE_DKIMSIGN to exclude headers from
  DKIM signing
- qmta-send major bug fix with flagchan
- Added remote mail redirector rd-remote
- Fixed maildir.c bug which breaks maildirserial. Skip non-regular files
- New program printass to print entries in users/cdb, users/assign file
===========================================================================
- 24/10/2023
01. use matchregex.h from /usr/include/qmail
02. svctool: fixed create_smtp argument check
03. svctool: added /etc/clamd.d to backup.conf
04. mail_acl.c, qregex.c, smtpd.c, uacl.c: use matchregex.h from
    /usr/include/qmail
05. qmail-queue.c: added feature to negate regexp match for archive feature
06. create_services.in: added --secureauth option for smtp port 587
08. create_services.in: added --setuser-priv option for slowq service
09. autoresponder.c, indimail-spamfilter.c: rewind descriptor 0 regardless of
    MAKE_SEEKABLE setting
- 26/10/2023
10. qmail-spamfilter.c: added HAMEXITCODE, UNSUREEXITCODE
11. qmail-spamfilter.c: Fixed working of globalspamredirect + REJECTSPAM
- 27/10/2023