@@ -1,6 +1,6 @@
 #
 #
-# $Id: indimail-mta.spec.in,v 1.401 2024-02-18 17:02:34+05:30 Cprogrammer Exp mbhangui $
+# $Id: indimail-mta.spec.in,v 1.402 2024-02-20 22:17:55+05:30 Cprogrammer Exp mbhangui $
 %undefine _missing_build_ids_terminate_build
 %global _unpackaged_files_terminate_build 1
 
@@ -489,6 +489,7 @@ echo ../resolv.conf 1>&3
 %dir %attr(0755,root,qmail)                        %{qsysconfdir}/control/global_vars
 %dir %attr(0755,root,root)                         %{qsysconfdir}/perms.d
 %dir %attr(0755,root,root)                         %{qsysconfdir}/perms.d/%{name}
+%dir %attr(0755,root,root)                         %{qsysconfdir}/filters.d
 %dir %attr(2775,root,qmail)                        %{qsysconfdir}/tcp
 %dir %attr(2775,root,qmail)                        %{qsysconfdir}/users
 %if "%{mandir}" != "/usr/share/man"
