@@ -1,12 +1,19 @@
 #
 # $Log: qf-log-subject.in,v $
+# Revision 1.2  2024-02-20 22:20:27+05:30  Cprogrammer
+# make script compatible with FILTERARGS as well as qmail-qfilter
+#
 # Revision 1.1  2021-08-03 16:15:05+05:30  Cprogrammer
 # Initial revision
 #
 #
-# $Id: qf-log-subject.in,v 1.1 2021-08-03 16:15:05+05:30 Cprogrammer Exp mbhangui $
+# $Id: qf-log-subject.in,v 1.2 2024-02-20 22:20:27+05:30 Cprogrammer Exp mbhangui $
 #
 
+[ -n "$ENVSIZE" -a -n "$MSGSIZE" ] && qmail_qfilter=1 || qmail_qfilter=0
+if [ ! -f /proc/$$/3 ] ; then
+	[ $qmail_qfilter -eq 1 ] && exit 0 || exec /bin/cat
+fi
 # read headers
 while read line
 do
@@ -24,7 +31,7 @@ do
 done
 
 # read envelope
-var=`tr ["\0"] ["\n"] 0<&3`
+var=$(tr ["\0"] ["\n"] 0<&3)
 for i in $var
 do
 	first=$(echo $i|cut -c1)
@@ -43,7 +50,8 @@ if [ -n "$TO" -a -n "$FROM" -a -n "$subject" -a -n "$date" ] ; then
 	else
 		echo "Date:$date, Subject:$subject, From: $FROM, To: $TO" | @prefix@/sbin/splogger
 	fi
-	exit $?
+	ret=$?
+	[ $qmail_qfilter -eq 1 ] && exit $ret || /bin/cat && exit $ret
 else
-	exit 0
+	[ $qmail_qfilter -eq 1 ] && exit 0 || exec /bin/cat
 fi
